hello-rest/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-rest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-rest
  namespace: hello-rest
  labels:
    app.kubernetes.io/name: hello-rest
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-rest
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-rest
    spec:
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: hello-rest
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: rest
          image: bittrance/hello-world:axum-hello-rest
          ports:
            - name: http
              containerPort: 8080
          # resources:
          #   requests:
          #     memory: 500Mi
          lifecycle:
            preStop:
              sleep:
                seconds: 2
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hello-rest
  namespace: hello-rest
spec:
  selector:
    app.kubernetes.io/name: hello-rest
  # type: LoadBalancer
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
