hello-rest/hello-rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-rest
  labels:
    app.kubernetes.io/name: hello-rest
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-rest
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-rest
    spec:
      containers:
        - name: rest
          image: bittrance/hello-rest:0.3.0
          args:
            - --workers=4
            - --bind=0.0.0.0:8080
            - --graceful-timeout=15
            - app:build()
          ports:
            - name: http
              containerPort: 8080
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "sleep 2"]
          startupProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hello-rest
spec:
  selector:
    app.kubernetes.io/name: hello-rest
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-rest
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hello-rest
#             port:
#               name: http
